nouvelle route setTags
